Several bugfixes & improvements to stats
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>